Fix the bug with sidebar's clickable menu items when they're collapsed

--- a/src/less/blocks/navigation.less
+++ b/src/less/blocks/navigation.less
@@ -38,6 +38,8 @@
   font-size: 14px;
   color: #2c2c2c;
 
+  pointer-events: none;
+
   &__content-wrapper {
     position: relative;
     display: flex;
@@ -57,6 +59,7 @@
     align-self: stretch;
     overflow: hidden;
     transform: translateX(0px);
+    pointer-events: all;
 
     > * {
       position: relative;
@@ -98,6 +101,7 @@
     border-radius: 2px;
     color: #8e8e8e;
     background-color: @color-lightgrey;
+    pointer-events: all;
 
     .icon--type_inner {
       width: 20px;
@@ -144,13 +148,14 @@
   // modifiers
   &--active {
     position: relative;
-    pointer-events: none;
 
     .navigation-item__content-box {
+      pointer-events: none;
       background-color: #fafafa;
     }
 
     .navigation-item__icon {
+      pointer-events: none;
       color: #fff;
     }
 
